feat: handle multiple pics and implement profilepic
