# src/controllers/session.ts
@@ -5,7 +5,8 @@ import { UserRequest } from '../types/UserRequest'
 interface SessionResponse extends UserResponse {
   isActivated: boolean
   name: string
-  id : number
+  id: number
+  profilePicture: string
 }
 
 @Security('bearerAuth')
@@ -19,13 +20,11 @@ export class SessionController {
   @Example<UserResponse>({
     id: 123,
     name: 'johnusername',
-    isActivated: false
+    isActivated: false,
   })
   @Get('/')
-  public async session(
-    @Request() req: UserRequest
-  ): Promise<SessionResponse> {
-    console.log("session api called");
+  public async session(@Request() req: UserRequest): Promise<SessionResponse> {
+    console.log('session api called')
     return session(req)
   }
 }
@@ -34,4 +33,5 @@ const session = (req: UserRequest) => ({
   id: req.user!.id,
   name: req.user!.name,
   isActivated: req.user!.isActivated,
+  profilePicture: req.user!.profilePicture,
 })
